# hack_UTD_2025

./: .gitignore  README.md  analyse_insights.py  compare_tmob.py  fastapi_server.py  imageanalysis_nemotron.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_multiple.py  test.py  webscrapper.py
Utdhackathon2025/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
Utdhackathon2025/src/: App.tsx  index.css
Utdhackathon2025/src/components/: AffectedCities.tsx  CompanyPosts.tsx  DashboardHeader.tsx  IssueReports.tsx  LoadingSpinner.tsx  MetricCard.tsx  OutageChart.tsx  OutageList.tsx  ProblemBreakdown.tsx  StarRating.tsx  USHeatmap.tsx
Utdhackathon2025/src/components/ui/: badge.tsx
Utdhackathon2025/src/data/: comparison_tmobile.json  outage-data.json  t-mobile-3.json
Utdhackathon2025/src/libs/: api.ts
Utdhackathon2025/src/pages/: ComparisonPage.tsx  Index.tsx  TMobileReport.tsx
reports/: att.json  boost-mobile.json  charter-communications.json  comparison_debug.txt  comparison_tmobile.json  cricket-wireless.json  dish.json  frontier.json  metro.json  spectrum.json  t-mobile.json  tracfone-wireless.json  tracfone.json  us-cellular.json  verizon.json
scraped-data/: att.json  boost-mobile.json  charter-communications.json  cricket-wireless.json  frontier.json  metro.json  t-mobile.json  tracfone-wireless.json  us-cellular.json  verizon.json
